--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,17 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
 
 jobs:
   build:
     name: E2E
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Test
-      run: sh scripts/run-e2e
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Test
+        run: sh scripts/run-e2e
