Add unit tests to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 jobs:
-  build:
+  e2e:
     name: E2E
     runs-on: ubuntu-latest
     steps:
@@ -15,3 +15,11 @@ jobs:
         uses: actions/checkout@v2
       - name: Test
         run: sh scripts/run-e2e
+  unit:
+    name: Unit
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Test
+        run: sh scripts/run-unit
