--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Task
         uses: Arduino/actions/setup-taskfile@master
-      - name: Test
+      - name: Run E2E Tests
         run: task tests:e2e
 
   unit:
@@ -55,5 +55,5 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Task
         uses: Arduino/actions/setup-taskfile@master
-      - name: Test
+      - name: Run Unit Tests
         run: task tests:unit
