Replace scripts directory with Task (#4)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,19 +7,53 @@ on:
   pull_request:
 
 jobs:
+  build-binaries:
+    name: Build Binaries
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Task
+        uses: Arduino/actions/setup-taskfile@master
+      - name: Install Go
+        uses: actions/setup-go@v2
+      - name: Build Binaries
+        run: task build:binaries
+      - name: Upload Build Artifacts (binaries)
+        uses: actions/upload-artifact@v1
+        with:
+          path: build
+          name: Binaries
+
+  build-docker:
+    name: Build Docker Images
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Task
+        uses: Arduino/actions/setup-taskfile@master
+      - name: Build Docker Images
+        run: task build:docker
+
   e2e:
     name: E2E
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Test
-        run: sh scripts/run-e2e
+      - name: Install Task
+        uses: Arduino/actions/setup-taskfile@master
+      - name: Run E2E Tests
+        run: task tests:e2e
+
   unit:
     name: Unit
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Test
-        run: sh scripts/run-unit
+      - name: Install Task
+        uses: Arduino/actions/setup-taskfile@master
+      - name: Run Unit Tests
+        run: task tests:unit
