Add tests, fix small channel bug in claims, add start/format tasks

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,6 +3,14 @@ version: '2'
 silent: true
 
 tasks:
+  start:
+    cmds:
+      - docker-compose up
+
+  format:
+    cmds:
+      - gofmt -s -w .
+
   tests:
     cmds:
       # Run sequentially
