--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -66,12 +66,12 @@ tasks:
       - echo "Building worker - macOS"
       - cd worker && GOOS=darwin GOARCH=amd64 go build -o ../build/worker-darwin-amd64 -ldflags "-s -w"
 
-  build:binaries:single:
+  build:binaries:race:
     cmds:
       - echo "Building API"
-      - cd api && go build -o ../build/api
+      - cd api && go build -race -o ../build/api
       - echo "Building worker"
-      - cd worker && go build -o ../build/worker
+      - cd worker && go build -race -o ../build/worker
 
   build:docker:
     cmds:
