--- a/worker/config.toml
+++ b/worker/config.toml
@@ -1,4 +1,3 @@
-address = ""
 debug = true
 log_requests = true
 redis_db = 0
@@ -7,3 +6,8 @@ redis_password = ""
 token = "abc123"
 jwt_secret = "abc123"
 default_channels = "global"
+messaging_method = "direct"
+
+# Worker only
+direct_message_hostname = "worker"
+direct_message_port = "80"
